<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Look at my GUI</string>
    <string name="ButtonText">Click Here!</string>
    <string name="checkbox">Check this out!</string>
    <string name="s">Switch</string>
    <string name="hint">Type here</string>
    <string name="toast_message">Here is more information</string>
    <string name="s_on">The Switch is now On</string>
    <string name="s_off">The Switch is now Off</string>
    <string name="textViewEmail">Enter your email here:</string>
    <string name="TypeEmailHere">Type email here</string>
    <string name="textViewPassword">Type your password: </string>
    <string name="loginButton">Login</string>
    <string name="yourProfile">Your profile</string>
    <string name="yourName">Your name:</string>
    <string name="enterYourName">Enter your name</string>
    <string name="yourEmail">Your email:</string>
    <string name="enterYourEmail">Enter your email</string>
    <string name="yourPicture">Your picture:</string>
    <string name="clickAbove">Click the button above to take a picture</string>
    <string name="GoToChatButton">Go to chat</string>
    <string name="buttonSend">Send</string>
    <string name="buttonReceive">Receive</string>
    <string name="typeHere">Type Here</string>
    <string name="messageFragment">Message Here</string>
    <string name="IDMessage">ID=</string>
    <string name="Hide">Hide</string>
    <string name="CBFragment">Is a Send Message</string>
    <string name="toolBarButton">Go to Toolbar Page</string>
    <string name="item1">Item 1</string>
    <string name="item2">Item 2</string>
    <string name="item3">Item 3</string>
    <string name="item4">Item 4</string>
    <string name="BackToChatButton">Chat Page</string>
    <string name="BackToProfileButton">Go back to Profile</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>