<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FrameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/messageFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/messageFragment" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idMessage"
        android:text="@string/IDMessage"
        android:layout_below="@id/messageFragment"/>

    <CheckBox
        android:id="@+id/checkBoxFragment"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/idMessage"
        android:layout_marginTop="2dp"
        android:text="@string/CBFragment" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/Hide"
        android:id="@+id/hideButton"/>


</RelativeLayout>