<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/buttonSend"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:transcriptMode="alwaysScroll" />

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:text="@string/buttonSend" />

    <EditText
        android:id="@+id/typeHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/buttonSend"
        android:layout_toLeftOf="@id/buttonReceive"
        android:hint="@string/typeHere" />

    <Button
        android:id="@+id/buttonReceive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/buttonReceive" />
</RelativeLayout>